styles/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

nav {
    background-color: steelblue;
    padding: 10px;
    display: flex;
    justify-content: space-around;
    align-content: center;
}
nav a {
    color: white;
    display: block;
    padding: 1px;
    text-decoration: none;
    
}
h1 {
    color: steelblue;
    border-bottom: 1px solid steelblue;

}
main img {
    width: 150px;
    height: auto;
    border: 1px solid steelblue;
    padding: 2px;
    margin: 1em;
    box-shadow: 0 0 30px gray;
    float: right;
}
p {
    padding: 0;
}

main p, h1, img{
    padding :0.5rem;
}
aside {
    width: 20em;
    text-align: center;
    position: relative;
    grid-column: 1/2;
    grid-row: 1/2;
}
main {
    grid-column: 2/3;
}
aside img {
    width: 200px;
    height: auto;
}

footer {
    margin-top: 1em;
    border-top: 1px solid #333;
    text-align: center;
}

header, .grid, footer {
    display: grid;
    max-width: 840px;
    margin: 0 auto;
    align-items: center;
}

ul {
    clear: right;

}

aside h2 {
    position: absolute;
    left: 135px;
    top: 35px;
}
/* Class Selectors */

.box {
    margin: 1rem;
    padding: 1rem;
    border: 1px solid rgba(0,0,0,1);
    background-color:steelblue;
    color: black;
}

